<resources>
    <string name="app_name">minix</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum" />
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="username">Username</string>
    <string name="empty">.......</string>

</resources>
